--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -21,7 +21,7 @@ jobs:
         run: yarn install
 
       - name: Build
-        run: yarn build && yarn export
+        run: yarn build
         env:
           CI: true
 
