--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
